ERROR_CODE3
File "C:\Users\bgyu1.lim\Desktop\새 폴더\thk_backup_streamlit.py", line 7
  """
     ^
SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 63-64: truncated \UXXXXXXXX escape


BASE_DIR   = Path(r"C:\Users\bgyu1.lim\Desktop\back_up_sheet")
BEFORE_DIR = BASE_DIR / "before"
AFTER_DIR  = BASE_DIR / "after"
